Added twig to the party

--- a/views/404.twig
+++ b/views/404.twig
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>Sorry we couldn't find your requested service</h1>
-        <a href="<?= base() ?>">Back to the blog</a>
+        <a href="{{ base }}">Back to the blog</a>
     </body>
 </html>
