--- a/views/home.twig
+++ b/views/home.twig
@@ -1,50 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="{{ style }}">
-        <title>Blogg</title>
-    </head>
-    <body>
-        <div class="wrapper">
-            <header>
-                <h1 class="title"><a href="#">Blogg</a></h1>
-                <nav>
-                    {% for item in menu_items %}
-                    <a href="{{ base }}kategori/{{ item.slug }}">
-                        {{ item.name }}
-                    </a>
-                    {% endfor %}
-                </nav>
-            </header>
-            <hr>
+{% extends 'templates/base.twig' %}
 
+{% block content %}
+<h2>Senaste inläggen</h2>
 
-            <h2>Senaste inläggen</h2>
-
-            <div class="posts">
-                {% if posts > 0 %}
-                    {% for post in posts %}
-                    <div class="post">
-                        <a href="{{ base }}post/{{ post.id }}">
-                            <h3>{{ post.title }}</h3>
-                            <div class="img" style="background-image: url('assets/uploads/{{ post.featured_img }}')"></div>
-                        </a>
-                    </div>
-                    {% endfor %}
-                {% else %}
-                    <h3>Sorry, no posts found</h3>
-                {% endif %}
-            </div>
-
-            <div class="pagination">
-                {{ pagination }}
-            </div>
-            <hr>
-            <a href="{{ base }}">Go back</a>
-            <p>The Footer &copy; {{ 'now' | date('Y') }}</p>
+<div class="posts">
+    {% if posts > 0 %}
+        {% for post in posts %}
+        <div class="post">
+            <a href="{{ base }}post/{{ post.id }}">
+                <h3>{{ post.title }}</h3>
+                <div class="img" style="background-image: url('assets/uploads/{{ post.featured_img }}')"></div>
+            </a>
         </div>
-    </body>
-</html>
+        {% endfor %}
+    {% else %}
+        <h3>Sorry, no posts found</h3>
+    {% endif %}
+</div>
+
+<div class="pagination">{{ pagination | raw }}</div>
+{% endblock %}
