--- a/views/user.twig
+++ b/views/user.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2>{{ user.first_name}} profile</h2>
+<h2>{{ user.full_name}} profile</h2>
 <a href="mailto:{{ user.email }}">
     <img src="../assets/uploads/{{ user.avatar }}" width="200">
 </a>
