Full Eloquent support, Psr-4 autoload, cleanup

--- a/views/home.twig
+++ b/views/home.twig
@@ -4,7 +4,7 @@
 <h2>Senaste inläggen</h2>
 
 <div class="posts">
-    {% if posts > 0 %}
+    {% if posts | length > 0 %}
         {% for post in posts %}
         <div class="post">
             <a href="{{ base }}post/{{ post.id }}">
