--- a/views/kategori.twig
+++ b/views/kategori.twig
@@ -3,8 +3,9 @@
 {% block content %}
 
 <h2>{{ cat.name }}</h2>
+<p>{{ cat.intro_text }}</p>
 <div class="posts">
-    {% for post in posts %}
+    {% for post in cat.posts %}
     <div class="post">
         <a href="{{ base }}post/{{ post.id }}">
             <h3>{{ post.title }}</h3>
